--- a/res/layout/bothlogins.xml
+++ b/res/layout/bothlogins.xml
@@ -92,7 +92,7 @@
 
 		<ImageView android:id="@+id/logoImageView"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:src="@drawable/logoX" android:contentDescription="@string/app_name" 
+			android:src="@drawable/logo" android:contentDescription="@string/app_name" 
 			android:layout_gravity="center_horizontal"/>
 
 		<TableRow
